Slider - Hard hacking

--- a/contenido/contacto.jade
+++ b/contenido/contacto.jade
@@ -8,7 +8,7 @@ html(lang='es-MX')
 		include includes/slider
 
 		section#interna
-
+			#botones-slider.container
 			.container
 				
 				h1 Contacto 
