--- a/contenido/index.jade
+++ b/contenido/index.jade
@@ -8,6 +8,7 @@ html(lang='es-MX')
 		include includes/slider
 
 		section#home-01
+			#botones-slider.container
 
 			article.container
 				h1 Bienvenido a Velemed 
@@ -18,35 +19,29 @@ html(lang='es-MX')
 
 			article.container
 
-				div
-					a(class="fancybox-media", href="http://www.youtube.com/watch?v=opj24KnzrWo")
-						img(src="http://placehold.it/468x400/DDF4A4")
-				div.last
-					h2 Laboratorio 
-					p Cupcake ipsum dolor sit amet jelly. Cheesecake jelly lemon drops cookie pudding. Oat cake icing candy cookie lemon drops danish muffin. Gummies donut  chocolate cake  donut chupa chups. Danish sugar plum liquorice ice cream croissant sesame snaps.
-					p Ice cream candy canes cookie marzipan dragée muffin brownie topping. Jelly-o jelly gingerbread tart biscuit candy muffin sugar plum liquorice. Sesame snaps jujubes danish donut. Marshmallow applicake apple pie macaroon caramels chocolate bar cupcake lemon drops pastry.
-						a(href="#").link-contacto contacto
+				a(class="fancybox-media", href="http://www.youtube.com/watch?v=opj24KnzrWo").float-left
+					img(src="http://placehold.it/468x400/DDF4A4")
+				h2 Laboratorio 
+				p Cupcake ipsum dolor sit amet jelly. Cheesecake jelly lemon drops cookie pudding. Oat cake icing candy cookie lemon drops danish muffin. Gummies donut  chocolate cake  donut chupa chups. Danish sugar plum liquorice ice cream croissant sesame snaps.
+				p Ice cream candy canes cookie marzipan dragée muffin brownie topping. Jelly-o jelly gingerbread tart biscuit candy muffin sugar plum liquorice. Sesame snaps jujubes danish donut. Marshmallow applicake apple pie macaroon caramels chocolate bar cupcake lemon drops pastry.
+					a(href="#").link-contacto contacto
 		section#home-03
 
 			article.container
-				div
-					h2 Laboratorio
-					p Cupcake ipsum dolor sit amet jelly. Cheesecake jelly lemon drops cookie pudding. Oat cake icing candy cookie lemon drops danish muffin. Gummies donut  chocolate cake  donut chupa chups. Danish sugar plum liquorice ice cream croissant sesame snaps.
-					p Ice cream candy canes cookie marzipan dragée muffin brownie topping. Jelly-o jelly gingerbread tart biscuit candy muffin sugar plum liquorice. Sesame snaps jujubes danish donut. Marshmallow applicake apple pie macaroon caramels chocolate bar cupcake lemon drops pastry.
-						a(href="#").link-contacto contacto
-				div.last
-					img(src="http://placehold.it/468x400/DDF4A4")
+				img(src="http://placehold.it/468x400/DDF4A4").float-right
+				h2 Laboratorio
+				p Cupcake ipsum dolor sit amet jelly. Cheesecake jelly lemon drops cookie pudding. Oat cake icing candy cookie lemon drops danish muffin. Gummies donut  chocolate cake  donut chupa chups. Danish sugar plum liquorice ice cream croissant sesame snaps.
+				p Ice cream candy canes cookie marzipan dragée muffin brownie topping. Jelly-o jelly gingerbread tart biscuit candy muffin sugar plum liquorice. Sesame snaps jujubes danish donut. Marshmallow applicake apple pie macaroon caramels chocolate bar cupcake lemon drops pastry.
+					a(href="#").link-contacto contacto
 		
 		section#home-04
 
 			article.container
-				div
-					img(src="http://placehold.it/468x400/DDF4A4")
-				div.last
-					h2 Laboratorio 
-					p Cupcake ipsum dolor sit amet jelly. Cheesecake jelly lemon drops cookie pudding. Oat cake icing candy cookie lemon drops danish muffin. Gummies donut  chocolate cake  donut chupa chups. Danish sugar plum liquorice ice cream croissant sesame snaps. 
-					p Ice cream candy canes cookie marzipan dragée muffin brownie topping. Jelly-o jelly gingerbread tart biscuit candy muffin sugar plum liquorice. Sesame snaps jujubes danish donut. Marshmallow applicake apple pie macaroon caramels chocolate bar cupcake lemon drops pastry.
-						a(href="#").link-contacto contacto
+				img(src="http://placehold.it/468x400/DDF4A4").float-left
+				h2 Laboratorio 
+				p Cupcake ipsum dolor sit amet jelly. Cheesecake jelly lemon drops cookie pudding. Oat cake icing candy cookie lemon drops danish muffin. Gummies donut  chocolate cake  donut chupa chups. Danish sugar plum liquorice ice cream croissant sesame snaps.
+				p Ice cream candy canes cookie marzipan dragée muffin brownie topping. Jelly-o jelly gingerbread tart biscuit candy muffin sugar plum liquorice. Sesame snaps jujubes danish donut. Marshmallow applicake apple pie macaroon caramels chocolate bar cupcake lemon drops pastry.
+					a(href="#").link-contacto contacto
 
 		include includes/footer
 		include includes/static
