--- a/contenido/page.jade
+++ b/contenido/page.jade
@@ -8,7 +8,8 @@ html(lang='es-MX')
 		include includes/slider
 
 		section#interna
-
+			#botones-slider.container
+				
 			.container
 				
 				h1 LABORATORIOS 
