Cambio de fuentes

--- a/contenido/contacto.jade
+++ b/contenido/contacto.jade
@@ -8,7 +8,8 @@ html(lang='es-MX')
 		include includes/slider
 
 		section#interna
-			#botones-slider.container
+			#botones-slider.container960
+				
 			.container
 				
 				h1 Contacto 
