--- a/contenido/includes/header.jade
+++ b/contenido/includes/header.jade
@@ -1,5 +1,5 @@
 header
-	.container
+	.container960
 		#logo
 			a(href="index.html")
 			img(src="../imagenes/logo-velemed.png", width="311", height="148")
