--- a/contenido/page.jade
+++ b/contenido/page.jade
@@ -8,8 +8,8 @@ html(lang='es-MX')
 		include includes/slider
 
 		section#interna
-			#botones-slider.container
-				
+			#botones-slider.container960
+
 			.container
 				
 				h1 LABORATORIOS 
@@ -26,7 +26,7 @@ html(lang='es-MX')
 					br(clear="all")
 					article#menu-01 
 						h3 Tipos de Exámenes
-						img(src="http://placehold.it/960x150").float-center
+						img(src="http://placehold.it/800x150").float-center
 						p Cupcake ipsum dolor sit amet jelly. Cheesecake jelly lemon drops cookie pudding. Oat cake icing candy cookie lemon drops danish muffin. Gummies donut  chocolate cake  donut chupa chups. Danish sugar plum liquorice ice cream croissant sesame snaps.
 						p Ice cream candy canes cookie marzipan dragée muffin brownie topping. Jelly-o jelly gingerbread tart biscuit candy muffin sugar plum liquorice. Sesame snaps jujubes danish donut. Marshmallow applicake apple pie macaroon caramels chocolate bar cupcake lemon drops pastry.
 						
