--- a/sass/_fonts.sass
+++ b/sass/_fonts.sass
@@ -1,28 +1,34 @@
-
 @font-face 
-	font-family: 'nunitobold'
-	src: url('../font/nunito-bold-webfont.eot')
-	src: url('../font/nunito-bold-webfont.eot?#iefix') format('embedded-opentype'), url('../font/nunito-bold-webfont.woff') format('woff'), url('../font/nunito-bold-webfont.ttf') format('truetype'), url('../font/nunito-bold-webfont.svg#nunitobold') format('svg')
+	font-family: 'OpenSansBold'
+	src: url('../font/OpenSans-Bold-webfont.eot')
+	src: url('../font/OpenSans-Bold-webfont.eot?#iefix') format('embedded-opentype'), url('../font/OpenSans-Bold-webfont.woff') format('woff'), url('../font/OpenSans-Bold-webfont.ttf') format('truetype'), url('../font/OpenSans-Bold-webfont.svg#OpenSansBold') format('svg')
 	font-weight: normal
 	font-style: normal
 
 @font-face 
-	font-family: 'nunitolight'
-	src: url('../font/nunito-light-webfont.eot')
-	src: url('../font/nunito-light-webfont.eot?#iefix') format('embedded-opentype'), url('../font/nunito-light-webfont.woff') format('woff'), url('../font/nunito-light-webfont.ttf') format('truetype'), url('../font/nunito-light-webfont.svg#nunitolight') format('svg')
+	font-family: 'OpenSansLight'
+	src: url('../font/OpenSans-Light-webfont.eot')
+	src: url('../font/OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype'), url('../font/OpenSans-Light-webfont.woff') format('woff'), url('../font/OpenSans-Light-webfont.ttf') format('truetype'), url('../font/OpenSans-Light-webfont.svg#OpenSansLight') format('svg')
 	font-weight: normal
 	font-style: normal
 
 @font-face 
-	font-family: 'nunitoregular'
-	src: url('../font/nunito-regular-webfont.eot')
-	src: url('../font/nunito-regular-webfont.eot?#iefix') format('embedded-opentype'), url('../font/nunito-regular-webfont.woff') format('woff'), url('../font/nunito-regular-webfont.ttf') format('truetype'), url('../font/nunito-regular-webfont.svg#nunitoregular') format('svg')
+	font-family: 'OpenSans'
+	src: url('../font/OpenSans-Regular-webfont.eot')
+	src: url('../font/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'), url('../font/OpenSans-Regular-webfont.woff') format('woff'), url('../font/OpenSans-Regular-webfont.ttf') format('truetype'), url('../font/OpenSans-Regular-webfont.svg#OpenSans') format('svg')
 	font-weight: normal
 	font-style: normal
 
 @font-face 
-	font-family: 'DroidSansRegular'
-	src: url('../font/DroidSans-webfont.eot')
-	src: url('../font/DroidSans-webfont.eot?#iefix') format('embedded-opentype'), url('../font/DroidSans-webfont.woff') format('woff'), url('../font/DroidSans-webfont.ttf') format('truetype'), url('../font/DroidSans-webfont.svg#DroidSansRegular') format('svg')
+	font-family: 'OpenSansSemibold'
+	src: url('../font/OpenSans-Semibold-webfont.eot')
+	src: url('../font/OpenSans-Semibold-webfont.eot?#iefix') format('embedded-opentype'), url('../font/OpenSans-Semibold-webfont.woff') format('woff'), url('../font/OpenSans-Semibold-webfont.ttf') format('truetype'), url('../font/OpenSans-Semibold-webfont.svg#OpenSansSemibold') format('svg')
+	font-weight: normal
+	font-style: normal
+
+@font-face 
+	font-family: 'Futura'
+	src: url('../font/futuraorto_bold-webfont.eot')
+	src: url('../futuraorto_bold-webfont.eot?#iefix') format('embedded-opentype'), url('../font/futuraorto_bold-webfont.woff') format('woff'), url('../font/futuraorto_bold-webfont.ttf') format('truetype'), url('../font/futuraorto_bold-webfont.svg#Futura') format('svg')
 	font-weight: normal
 	font-style: normal
