--- a/contenido/includes/footer.jade
+++ b/contenido/includes/footer.jade
@@ -1,4 +1,5 @@
 footer
 	.container
-		p Cheesecake jelly lemon drops cookie pudding. 
-		p Oat cake icing candy cookie lemon drops danish muffin
+		p.float-left 
+			a(href="contacto.html") Contáctanos
+		p.float-right Velemed. 2013. Todos los derechos reservados
