--- a/sass/styles-ie7.sass
+++ b/sass/styles-ie7.sass
@@ -26,3 +26,11 @@ footer
 #tabs > ul li a
 	display: block
 	width: 125px
+
+.form
+	label
+		textarea, input, select
+			width: 380px
+
+#interna, #home-01
+	min-height: 140px
