--- a/contenido/includes/header.jade
+++ b/contenido/includes/header.jade
@@ -2,7 +2,7 @@ header
 	.container960
 		#logo
 			a(href="index.html")
-			img(src="../imagenes/logo-velemed.png", width="311", height="148")
+				img(src="../imagenes/logo-velemed.png")
 		nav
 			ul
 				li
@@ -60,4 +60,4 @@ header
 						li
 							a(href="page.html") Galería
 				li.intranet
-					a(href="page.html") Intranet
+					a(href="page.html") Acceso a Médicos
