--- a/contenido/index.jade
+++ b/contenido/index.jade
@@ -20,7 +20,7 @@ html(lang='es-MX')
 			article.container
 				// a(class="fancybox-media", href="http://www.youtube.com/watch?v=opj24KnzrWo").float-left
 					img(src="http://placehold.it/300x400/DDF4A4")
-				img(src="http://placehold.it/300x400/DDF4A4").float-left
+				img(src="http://placehold.it/400x224/DDF4A4").float-left
 				h2 Laboratorio 
 				p Cupcake ipsum dolor sit amet jelly. Cheesecake jelly lemon drops cookie pudding. Oat cake icing candy cookie lemon drops danish muffin. Gummies donut  chocolate cake  donut chupa chups. Danish sugar plum liquorice ice cream croissant sesame snaps.
 				p Ice cream candy canes cookie marzipan dragée muffin brownie topping. Jelly-o jelly gingerbread tart biscuit candy muffin sugar plum liquorice. Sesame snaps jujubes danish donut.
@@ -28,8 +28,9 @@ html(lang='es-MX')
 		section#home-03
 
 			article.container
-				img(src="http://placehold.it/300x400/DDF4A4").float-right
-				h2 Laboratorio
+				a(href="pagina").g-implementaciones.float-right
+				a(href="pagina").g-umoviles.float-right
+				h2 Gobierno
 				p Cupcake ipsum dolor sit amet jelly. Cheesecake jelly lemon drops cookie pudding. Oat cake icing candy cookie lemon drops danish muffin. Gummies donut  chocolate cake  donut chupa chups. Danish sugar plum liquorice ice cream croissant sesame snaps.
 				p Ice cream candy canes cookie marzipan dragée muffin brownie topping. Jelly-o jelly gingerbread tart biscuit candy muffin sugar plum liquorice. Sesame snaps jujubes danish donut. Marshmallow applicake apple pie macaroon caramels chocolate bar cupcake lemon drops pastry.
 				a(href="#").link-contacto contacto
@@ -37,8 +38,9 @@ html(lang='es-MX')
 		section#home-04
 
 			article.container
-				img(src="http://placehold.it/300x400/DDF4A4").float-left
-				h2 Laboratorio 
+				a(href="pagina").g-implementaciones.float-left
+				a(href="pagina").g-umoviles.float-left
+				h2 Empresas 
 				p Cupcake ipsum dolor sit amet jelly. Cheesecake jelly lemon drops cookie pudding. Oat cake icing candy cookie lemon drops danish muffin. Gummies donut  chocolate cake  donut chupa chups. Danish sugar plum liquorice ice cream croissant sesame snaps.
 				p Ice cream candy canes cookie marzipan dragée muffin brownie topping. Jelly-o jelly gingerbread tart biscuit candy muffin sugar plum liquorice. Sesame snaps jujubes danish donut. Marshmallow applicake apple pie macaroon caramels chocolate bar cupcake lemon drops pastry.
 				a(href="#").link-contacto contacto
